Projeto/Compilador/tests/cases/error/T42.pas
program T42;
var
  length: integer;
begin
  length := 3;
end.
